[package]
name = "passbaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["derive"] }
pbkdf2 = "*"
password-hash = "*"
rand_core = { features = ["std"] }
chrono = { features = ["serde"] }
rpassword = "*"
home = "*"
toml = "*"
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.*" }